Fix for UICA-114 menu item lines not being in the right place

--- a/components/20-templates/default/components/nav-anchor.scss
+++ b/components/20-templates/default/components/nav-anchor.scss
@@ -19,7 +19,7 @@
     position: relative;
     
     &:last-child {
-      border-bottom: none;
+      //border-bottom: none;
     }
 
     .fa {
@@ -61,7 +61,7 @@
   li {
     border: none;
     margin-left: 1rem;
-    border-top: 1px solid $color--gray-4;
+    border-bottom: 1px solid $color--gray-4;
   }
 
   a {
