Added border back

--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -1,6 +1,7 @@
 @import '_global.scss';
 
 .header-site {
+  border-bottom: 1px solid $color--gray-4;
   width: 100%;
   border-top: 6px solid black;
   @include clearfix();
