--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -245,6 +245,14 @@ img {
   }
 }
 
+.grid.grid--auto-height {
+  .col--1-4 {
+    margin-top: .5rem;
+  }
+  .col--3-4 {
+    min-height: auto;
+  }
+}
 
 /*
  * This is exclusively for use with react-sticky.
@@ -253,4 +261,32 @@ img {
 .header-container .sticky {
   z-index: 2;
   width: inherit;
+}
+
+.section-landing__badge {
+  background-color: $color--gray-6;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100px;
+  border: 4px solid #f5f5f5;
+  border-radius: 97px;
+  margin: 0 auto;
+  position: relative;
+  height: 150px;
+  width: 150px;
+  z-index: 50;
+
+  @include breakpoint($bp--large) {
+    height: 194px;
+    width: 194px;
+    background-size: 140px;
+  }
+}
+
+.section-landing__badge--yellow {
+  background-color: $color--yellow;
+}
+
+.section-landing__badge--blue {
+  background-color: $color--blue;
 }
