--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -1,23 +1,22 @@
 @import '_global.scss';
 
 .cta__container {
-  margin: 0 2rem 3rem;
-  @include breakpoint($bp--xlarge) {
-    margin-left: 0;
-    margin-right: 0;
+  margin-bottom: 3rem;
+  @include breakpoint($bp--mid) {
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 }
 
 .homepage__cta {
-  border-top: 4px solid #f5f5f5;
   color: #000;
-  min-height: 265px;
-  padding: 2rem 2.5rem 1rem;
-  margin: 0 2rem 0;
+  margin: 0 0 2rem;
   position: relative;
   @include breakpoint($bp--mid) {
-    padding-left: 7rem;
-    padding-right: 7rem;
+    border-top: 4px solid #f5f5f5;
+    margin: 0 2rem 0;
+    min-height: 265px;
+    padding: 2rem 7rem 1rem;
   }
   @include breakpoint($bp--xlarge) {
     margin: 0;
@@ -27,9 +26,8 @@
   }
   
   &:nth-child(odd) {
-    padding-right: 0;
-    border-left: 4px solid #f5f5f5;
     @include breakpoint($bp--mid) {
+      border-left: 4px solid #f5f5f5;
       padding-right: 2rem;
     }
     @include breakpoint($bp--xlarge) {
@@ -37,50 +35,51 @@
     }
   }
   &:nth-child(even) {
-    padding-left: 0;
-    border-right: 4px solid #f5f5f5;
     @include breakpoint($bp--mid) {
       padding-left: 2rem;
+      border-right: 4px solid #f5f5f5;
     }
     @include breakpoint($bp--xlarge) {
       padding-left: 10rem;
     }
   }
 
-  /** Hide top of borders **/
-  &:first-child {
-    border-top-width: 0;
-    &:after {
-      background: #fff;
-      content: '';
-      left: -4px;
-      height: 3em;
-      position: absolute;
-      top: 0;
-      width: 4px;
-      z-index: 10;
-    }
-  }
-  /** Hide bottom of borders **/
-  &:last-child {
-    // Use before and after to handle odd/even
-    &:before,
-    &:after {
-      background: #fff;
-      bottom: 0;
-      content: '';
-      height: 75%;
-      position: absolute;
-      left: -4px;
-      width: 4px;
-      z-index: 10;
-      @include breakpoint($bp--large) {
-        height: 50%;
+  @include breakpoint($bp--mid) {
+    /** Hide top of borders **/
+    &:first-child {
+      border-top-width: 0;
+      &:after {
+        background: #fff;
+        content: '';
+        left: -4px;
+        height: 3em;
+        position: absolute;
+        top: 0;
+        width: 4px;
+        z-index: 10;
       }
     }
-    &:after {
-      left: auto;
-      right: -4px;
+    /** Hide bottom of borders **/
+    &:last-child {
+      // Use before and after to handle odd/even
+      &:before,
+      &:after {
+        background: #fff;
+        bottom: 0;
+        content: '';
+        height: 75%;
+        position: absolute;
+        left: -4px;
+        width: 4px;
+        z-index: 10;
+        @include breakpoint($bp--large) {
+          height: 50%;
+        }
+      }
+      &:after {
+        left: auto;
+        right: -4px;
+      }
     }
   }
 
@@ -88,23 +87,33 @@
     background-color: #00aeef;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 140px;
+    background-size: 80px;
     border: 4px solid #f5f5f5;
-    border-radius: 97px;
-    margin-top: -.5rem;
+    border-radius: 70px;
+    height: 120px;
+    left: 35%;
+    margin-bottom: 1rem;
     position: relative;
-    height: 194px;
-    width: 194px;
+    width: 120px;
     z-index: 50;
+    @include breakpoint($bp--small) {
+      left: 39%;
+    }
+    @include breakpoint($bp--mid) {
+      background-size: 140px;
+      border-radius: 97px;
+      left: auto;
+      height: 194px;
+      margin-top: -.5rem;
+      width: 194px;
+    }
   }
 
   &:nth-child(odd) {
     border-right: none;
     .homepage__cta__badge {
-      float: left;
-      margin-left: -7.5rem;
-      margin-right: 1rem;
       @include breakpoint($bp--mid) {
+        float: left;
         margin-left: -13rem;
         margin-right: 0;
       }
@@ -116,10 +125,8 @@
   &:nth-child(even) {
     border-left: none;
     .homepage__cta__badge {
-      float: right;
-      margin-left: 1rem;
-      margin-right: -7.5rem;
       @include breakpoint($bp--mid) {
+        float: right;
         margin-left: 0;
         margin-right: -13rem;
       }
@@ -154,8 +161,14 @@
   h2 {
     color: $color--gray;
     font-family: $font-montserrat;
-    font-size: 32px;
+    font-size: 26px;
     margin-top: 0;
+    @include breakpoint($bp--small) {
+      font-size: 30px;
+    }
+    @include breakpoint($bp--mid) {
+      font-size: 32px;
+    }
   }
 
   ul {
