--- a/components/30-components/basic/student-profiles/student-profiles.scss
+++ b/components/30-components/basic/student-profiles/student-profiles.scss
@@ -21,11 +21,12 @@
       margin-bottom: 2rem;
     }
 
-    hr {
+    > hr {
       background-color: #fdbf11;
       height: 6px;
       margin-bottom: 1.5rem;
       width: 200px;
+      border-bottom: none;
     }
 
     > p {
@@ -44,29 +45,58 @@
       @include clearfix();
       margin: 2rem 0 0;
       text-align: center;
+
       li {
+        background-color: darken($color--blue, 4);
         list-style: none;
-        display: inline-block;
+        display: block;
         text-align: left;
         vertical-align: top;
-        margin-bottom: 5rem;
+        margin-bottom: 2rem;
+        position: relative;
 
         a {
-          color: #FFF;
-          text-decoration: underline;
+          color: $color--yellow;
+
+          &:hover {
+            color: white;
+            text-decoration: none;
+          }
+
+          .fa {
+            margin-left: .2rem;
+            font-size: 12px;
+          }
         }
 
         @include breakpoint($bp--mid) {
-          margin: 1% 1% 5rem;
-          width: 48%;
+          margin: 1% 2% 2rem;
+          width: 46%;
+          height: 513px;
+          float: left;
         }
         @include breakpoint($bp--large) {
-          width: 22%;
-          &:nth-child(2) {
-            margin-right: 2%;
+          width: 29%;
+          height: 470px;
+        }
+      }
+      p {
+        margin: 1rem 1.5rem 1.2rem 1.5rem;
+        line-height: 1.6;
+
+        &.cta {
+          @include breakpoint($bp--mid) {
+            position: absolute;
+            bottom: 0;
+            padding: 0 1rem;
+            margin: 0;
+            width: 100%;
           }
-          &:last-child {
-            margin-right: 0;
+
+          a {
+            border-top: 1px solid lighten($color--blue,5);
+            display: block;
+            padding: 1rem 0;
           }
         }
       }
