--- a/pages/home.scss
+++ b/pages/home.scss
@@ -14,7 +14,7 @@
 .c-narrative {
   background: #fff;
   font-size: 21px;
-  line-height: 1.3;
+  line-height: 1.7;
   padding: 2rem 2.5rem 0;
   text-align: center;
   p {
@@ -30,13 +30,16 @@
     line-height: 1;
     margin-top: 2rem;
     padding: .5rem 1rem .75rem 1.5rem;
-  
-    &:after {
-      content: '>';
-      display: inline-block;
-      font-size: 26px;
-      font-weight: 700;
-      margin-left: 1.25rem;
+
+    .fa {
+      font-size: 18px;
+      margin-left: .5rem;
+    }
+
+    &:hover {
+      background-color: $color--blue;
+      color: white;
+      text-decoration: none;
     }
   }
 }
