[UICA-97] - Added functionality to add active/active-trail classes to menu items. Used those classes to keep sub-menu open in sticky header.

--- a/components/20-templates/default/components/nav-breadcrumb.scss
+++ b/components/20-templates/default/components/nav-breadcrumb.scss
@@ -1,5 +1,10 @@
+@import '_global.scss';
+
 .breadcrumb {
   font-size: 12px;
+  @include breakpoint($bp--large) {
+    padding-top: 15px;
+  }
 
   a {
     font-weight: normal;
