--- a/components/30-components/multipage/multipage.scss
+++ b/components/30-components/multipage/multipage.scss
@@ -3,12 +3,15 @@
 
 .grid .sticky {
   .breadcrumb {
-    padding: 20px 0;
+    padding: 35px 0 20px;
     display: block;
   }
 }
 .col--1-4 {
   margin-top: 60px;
+  @include breakpoint($bp--large) {
+    margin-top: 10px;
+  }
 }
 .grid .col--3-4 {
   min-height: 800px;
@@ -29,7 +32,6 @@
 
   .col--1-4 {
     width: 100%;
+    margin-top: 60px;
   }
 }
-
-
