--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -55,7 +55,7 @@
         height: 94px;
       }
     }
-  
+
     &:hover > a,
     &.active > a,
     &.active-trail > a {
@@ -69,7 +69,7 @@
       left: 0px;
       width: 100%;
       text-align: center;
-      
+
       li {
         display: inline-block;
       }
@@ -96,20 +96,21 @@
       font-family: $font-lato;
       line-height: 26px;
       border-bottom: 6px solid transparent;
-  
+
       @include breakpoint($bp--mid) {
         font-size: 14px;
         line-height: 30px;
       }
-  
+
       @include breakpoint($bp--large) {
         line-height: 40px;
         font-size: 14px;
         padding-bottom: 2px;
       }
       @include breakpoint($bp--xlarge) {
-        line-height: 52px;
+        line-height: 32px;
         font-size: 16px;
+        padding-top: 20px;
       }
     }
   }
@@ -117,7 +118,7 @@
 
 ul.nav-primary__second-level {
   background-color: #fff;
-  line-height: 35px;
+  line-height: 10px;
   width: auto;
   z-index: 15;
 
@@ -131,13 +132,13 @@ ul.nav-primary__second-level {
       font-size: 15px;
       font-weight: normal;
       line-height: 40px;
-      
+
       @include breakpoint($bp--mid) {
         padding: 11px .5rem;
       }
       @include breakpoint($bp--large) {
         font-size: 13px;
-        line-height: 34px;
+        line-height: 10px;
         padding: 9px .8rem;
       }
       @include breakpoint($bp--xlarge) {
@@ -168,7 +169,7 @@ ul.nav-primary__second-level {
 .header-site.header-sticky {
   @include breakpoint($bp--large) {
     .header-site__nav-primary-wrapper {
-      padding-top: 23px;
+      padding-top: 26px;
     }
     .header-site__nav-utility-wrapper {
       li,
@@ -180,6 +181,7 @@ ul.nav-primary__second-level {
       > li > a {
         animation: nav-mini $header-transition-duration ease;
         animation-fill-mode: forwards;
+        padding-top: 0;
       }
 
       .nav-primary__second-level {
