--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -141,8 +141,8 @@
   100% { width: 70px; height: 55px;}
 }
 @keyframes header-logo {
-  0% { background: url('./img/logo.svg') no-repeat center center; }
-  100% { background: url('./img/logo.svg') no-repeat -25px -17px; background-size: 400%; width: 55px; height: 55px;}
+  0% { }
+  100% { width: 55px; height: 55px;}
 }
 
 .header-site.header-sticky {
@@ -162,6 +162,8 @@
         .header-site__logo {
           animation: header-logo $header-transition-duration ease;
           animation-fill-mode: forwards;
+          background: url('./img/logo-mini-dark.png') no-repeat 10%;
+          background-size: 75%;
         }
       }
     }
