--- a/components/30-components/basic/alerts/alerts.scss
+++ b/components/30-components/basic/alerts/alerts.scss
@@ -6,6 +6,7 @@
   padding-bottom: 1.25rem;
   @include breakpoint($bp--mid) {
     padding-bottom: 1.75rem;
+    margin: 0 2.2rem 1.5rem;
   }
   
   h2 {
