changing colors to vars

--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -139,37 +139,37 @@
   /* Color the badges */
   &:nth-child(1) {
     .homepage__cta__badge {
-      background-color: #00aeef;
+      background-color: $color--blue;
     }
   }
   &:nth-child(2) {
     .homepage__cta__badge {
-      background-color: #fdbf11;
+      background-color: $color--yellow;
     }
   }
   &:nth-child(3) {
     .homepage__cta__badge {
-      background-color: #9d9fa2;
+      background-color: $color--gray-5;
     }
   }
   &:nth-child(4) {
     .homepage__cta__badge {
-      background-color: #00aeef;
+      background-color: $color--blue;
     }
   }
   &:nth-child(5) {
     .homepage__cta__badge {
-      background-color: #fdbf11;
+      background-color: $color--yellow;
     }
   }
   &:nth-child(6) {
     .homepage__cta__badge {
-      background-color: #9d9fa2;
+      background-color: $color--gray-5;
     }
   }
   &:nth-child(7) {
     .homepage__cta__badge {
-      background-color: #00aeef;
+      background-color: $color--blue;
     }
   }
 
