Primary nav tweaks to include styling such as the bottom 1px line and line-height

--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -2,7 +2,7 @@
 
 .header-site {
   background: #fff;
-  border-bottom: 1px solid $color--gray-4;
+  //border-bottom: 1px solid $color--gray-4;
   width: 100%;
   border-top: 6px solid black;
   @include clearfix();
