Changing X label item to include positioning element, work for styling graphs in css

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -125,6 +125,11 @@
   font-style: italic;
 }
 
+.c3-axis-x-label {
+  font-style: italic;
+  font-size: 12px;
+}
+
 .c3-axis-y-label {
   display: none;
 }
