Homogenized data points via CSS

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -62,3 +62,14 @@
   margin: 1px;
   color: white;
 }
+
+.c3-circle {
+  stroke-width: 4px;
+  stroke: $color--blue;
+
+  &._expanded_ {
+    stroke-width: 0px;
+    stroke: $color--blue;
+    fill: $color--blue !important;
+  }
+}
